--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,133 @@
 **/replace/replace
 
 /gcov_example/
+
+/benchmarks/tcas/v9/tcas
+/benchmarks/tcas/v12/tcas
+/benchmarks/tcas/v22/tcas
+/benchmarks/tcas/v21/tcas
+/benchmarks/tcas/v26/tcas
+/benchmarks/tcas/v16/tcas
+/benchmarks/tcas/v20/tcas
+/benchmarks/tcas/v15/tcas
+/benchmarks/tcas/v8/tcas
+/benchmarks/tcas/v11/tcas
+/benchmarks/tcas/v13/tcas
+/benchmarks/tcas/v38/tcas
+/benchmarks/tcas/v28/tcas
+/benchmarks/tcas/v10/tcas
+/benchmarks/tcas/v5/tcas
+/benchmarks/tcas/v32/tcas
+/benchmarks/tcas/v31/tcas
+/benchmarks/tcas/v41/tcas
+/benchmarks/tcas/v18/tcas
+/benchmarks/tcas/v27/tcas
+/benchmarks/tcas/v25/tcas
+/benchmarks/tcas/v40/tcas
+/benchmarks/tcas/v4/tcas
+/benchmarks/tcas/v2/tcas
+/benchmarks/tcas/v17/tcas
+/benchmarks/tcas/v14/tcas
+/benchmarks/tcas/v33/tcas
+/benchmarks/tcas/v24/tcas
+/benchmarks/tcas/v1/tcas
+/benchmarks/tcas/v30/tcas
+/benchmarks/tcas/v6/tcas
+/benchmarks/tcas/v35/tcas
+/benchmarks/tcas/v39/tcas
+/benchmarks/tcas/v23/tcas
+/benchmarks/tcas/v34/tcas
+/benchmarks/tcas/v29/tcas
+/benchmarks/tcas/v3/tcas
+/benchmarks/tcas/v36/tcas
+/benchmarks/tcas/v19/tcas
+/benchmarks/tcas/v37/tcas
+/benchmarks/tcas/v7/tcas
+/benchmarks/totinfo/v9/totinfo
+/benchmarks/totinfo/v12/totinfo
+/benchmarks/totinfo/v22/totinfo
+/benchmarks/totinfo/v21/totinfo
+/benchmarks/totinfo/v16/totinfo
+/benchmarks/totinfo/v20/totinfo
+/benchmarks/totinfo/v15/totinfo
+/benchmarks/totinfo/v8/totinfo
+/benchmarks/totinfo/v11/totinfo
+/benchmarks/totinfo/v13/totinfo
+/benchmarks/totinfo/v10/totinfo
+/benchmarks/totinfo/v5/totinfo
+/benchmarks/totinfo/v18/totinfo
+/benchmarks/totinfo/v4/totinfo
+/benchmarks/totinfo/v2/totinfo
+/benchmarks/totinfo/v17/totinfo
+/benchmarks/totinfo/v14/totinfo
+/benchmarks/totinfo/v1/totinfo
+/benchmarks/totinfo/v6/totinfo
+/benchmarks/totinfo/v23/totinfo
+/benchmarks/totinfo/v3/totinfo
+/benchmarks/totinfo/v19/totinfo
+/benchmarks/totinfo/v7/totinfo
+/benchmarks/schedule/v9/schedule
+/benchmarks/schedule/v8/schedule
+/benchmarks/schedule/v5/schedule
+/benchmarks/schedule/v4/schedule
+/benchmarks/schedule/v2/schedule
+/benchmarks/schedule/v1/schedule
+/benchmarks/schedule/v6/schedule
+/benchmarks/schedule/v3/schedule
+/benchmarks/schedule/v7/schedule
+/benchmarks/schedule2/v9/schedule2
+/benchmarks/schedule2/v8/schedule2
+/benchmarks/schedule2/v5/schedule2
+/benchmarks/schedule2/v4/schedule2
+/benchmarks/schedule2/v2/schedule2
+/benchmarks/schedule2/v1/schedule2
+/benchmarks/schedule2/v6/schedule2
+/benchmarks/schedule2/v3/schedule2
+/benchmarks/schedule2/v7/schedule2
+/benchmarks/printtokens/v5/printtokens
+/benchmarks/printtokens/v4/printtokens
+/benchmarks/printtokens/v2/printtokens
+/benchmarks/printtokens/v1/printtokens
+/benchmarks/printtokens/v6/printtokens
+/benchmarks/printtokens/v3/printtokens
+/benchmarks/printtokens/v7/printtokens
+/benchmarks/printtokens2/v9/printtokens2
+/benchmarks/printtokens2/v8/printtokens2
+/benchmarks/printtokens2/v5/printtokens2
+/benchmarks/printtokens2/v4/printtokens2
+/benchmarks/printtokens2/v2/printtokens2
+/benchmarks/printtokens2/v1/printtokens2
+/benchmarks/printtokens2/v6/printtokens2
+/benchmarks/printtokens2/v3/printtokens2
+/benchmarks/printtokens2/v7/printtokens2
+/benchmarks/replace/v9/replace
+/benchmarks/replace/v12/replace
+/benchmarks/replace/v22/replace
+/benchmarks/replace/v21/replace
+/benchmarks/replace/v26/replace
+/benchmarks/replace/v16/replace
+/benchmarks/replace/v20/replace
+/benchmarks/replace/v15/replace
+/benchmarks/replace/v8/replace
+/benchmarks/replace/v11/replace
+/benchmarks/replace/v13/replace
+/benchmarks/replace/v28/replace
+/benchmarks/replace/v10/replace
+/benchmarks/replace/v5/replace
+/benchmarks/replace/v31/replace
+/benchmarks/replace/v18/replace
+/benchmarks/replace/v27/replace
+/benchmarks/replace/v25/replace
+/benchmarks/replace/v4/replace
+/benchmarks/replace/v2/replace
+/benchmarks/replace/v17/replace
+/benchmarks/replace/v14/replace
+/benchmarks/replace/v24/replace
+/benchmarks/replace/v1/replace
+/benchmarks/replace/v30/replace
+/benchmarks/replace/v6/replace
+/benchmarks/replace/v23/replace
+/benchmarks/replace/v29/replace
+/benchmarks/replace/v3/replace
+/benchmarks/replace/v19/replace
+/benchmarks/replace/v7/replace
